@@ -1,6 +1,7 @@
 Version 0.9.32   unreleased
 
     * Move up to CedarCommon v2.3.1.
+    * Add WidgetUtils.clickOnEnter() and WidgetUtils.setFocusAfterDisplay().
 
 Version 0.9.31   09 Oct 2013
 
